# bisque-computer

./: .gitignore  CLAUDE.md  Cargo.toml  PROTOCOL.md  README_TESTING.md  build.rs
.cargo/: config.toml
.github/workflows/: release.yml
docker/: Dockerfile
docs/: SANDBOXED_TERMINAL_DESIGN.md
sandbox/: claude-sandbox.sb
scratch/bisque-texture/: compare.js  index.html  main.js
scripts/: build-app.sh
skills/: design-system.md
skills/sources/: color-and-attention.md  embedded-scripting.md  print-layout.md  rust-crates.md  rust-hot-reload.md  self-hosted-dev.md  typography.md  visualization-pioneers.md
src/: dashboard.rs  design.rs  design_repl.rs  info_screen.rs  logging.rs  main.rs  pane_tree.rs  paths.rs  protocol.rs  state_machine.rs  terminal.rs  text_selection.rs  token_watcher.rs  voice.rs  ws_client.rs
src/state_machine/: app_mode_sm.rs  voice_sm.rs
src/vm/: claude_isolation.rs  drop_server.rs  filesystem.rs  lifecycle.rs  mod.rs  provisioning.rs  remote_channel.rs
tests/: vm_integration.rs  vm_unit.rs
