[package]
name = "bisque-computer"
version = "0.7.0"
edition = "2024"

[dependencies]
vello = "0.7.0"
winit = "0.30.12"
pollster = "0.4.0"
anyhow = "1.0"

# Async runtime for WebSocket client and process spawning
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "fs"] }

# WebSocket client
tokio-tungstenite = { version = "0.26", default-features = false, features = ["connect", "handshake"] }
futures-util = "0.3"
url = "2"

# JSON parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Structured logging (dev file logging via BISQUE_LOG=1)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
tracing-appender = "0.2"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Clipboard access (Cmd+V / Ctrl+V paste support)
arboard = "3"

# Font rendering
skrifa = "0.40.0"
peniko = "0.6.0"

# Hierarchical state machine for app-level state management
statig = "0.4"

# Text layout and interactive text selection
parley = "0.7.0"

# Voice input: audio capture, WAV encoding, HTTP transcription
cpal = "0.15"
hound = "3.5"
reqwest = { version = "0.12", features = ["multipart", "json"] }
portable-pty = "0.9"
alacritty_terminal = "0.25"

# File watching for design token hot-reload
notify = "7"
